--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix clone html css</title>
-    <link rel="stylesheet" href="/style.css "type="css/text" >
+    <link rel="stylesheet" href="/style.css " >
 </head>
 <body class="main-body">
     
