--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <div class="headdiv">
         <div class="indiv">
-        <img class="logo" src="/netflixlogo.png">
+        <img class="logo" src="netflixlogo.png">
         <a href="https://www.netflix.com/bd/login" class="signin">Sign In</a>    
      </div>
    
